# hiqp

./: .dir-locals.el  .gitignore  README.md  hiqp.sublime-workspace  hiqp_controllers.sublime-project  hiqp_controllers.sublime-workspace  neckutrek  neckutrek.pub
hiqp/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
hiqp/config/: rbt_yumi.yaml
hiqp/include/hiqp/: hiqp_solver.h  hiqp_time_point.h  robot_state.h  ros_kinematics_controller.h  ros_visualizer.h  task.h  task_function.h  task_manager.h
hiqp/launch/: controller.launch  debug_teleop.rviz  yumi_rviz.launch  yumi_simulation.launch
hiqp/minjerk_eval/: f5t5Knot0_results.csv
hiqp/minjerk_eval/csv_data/: f20t10K1.csv  f20t4K0.csv  f280t5K0.csv  (+4 more)
hiqp/src/: hiqp_time_point.cpp  hiqp_utils.cpp  ros_kinematics_controller.cpp  ros_topic_subscriber.cpp  task.cpp  task_factory__old.cpp  task_manager.cpp
hiqp/topic_records/: popminjerk1.csv
hiqp_client/: CMakeLists.txt  package.xml
hiqp_client/src/: hiqp_client.cpp  test_frameonframe.cpp
hiqp_controllers/: CMakeLists.txt  CMakeLists.txt~  doxygen.config  doxygen.config~  hiqp_controllers_plugins.xml  package.xml  package.xml~  yumi_kdl_info.txt
hiqp_controllers/cmake_modules/: FindCASADI.cmake
hiqp_controllers/config/: myrobot.yaml~  rbt_pendulum.yaml  rbt_yumi.yaml  rbt_yumi.yaml~  yumi_hiqp_preload.yaml  yumi_hiqp_preload_jntlimits.yaml  yumi_jnt_limits.yaml
hiqp_controllers/gripper_eval/: plot_results.R  results05.csv
hiqp_controllers/include/: hiqp_kinematic_controller.h  hiqp_kinematic_controller.h~  hiqp_utils.h  task.h  task_manager.h  task_pop.h
hiqp_controllers/launch/: controller.launch  hiqp_kin_controller.launch  hiqp_kin_controller.launch~  hiqp_kinematic_controller.launch  hiqp_kinematic_controller.launch~  hiqp_kinematic_controller_pendulum.launch  hiqp_kinematic_controller_pendulum.launch~  hiqp_kinematic_controller_yumi.launch  hiqp_kinematic_controller_yumi.launch~  yumi.rviz  yumi_rviz.launch
hiqp_controllers/minjerk_eval/: .Rhistory  extract_data.R  extract_data3.R  f20t10K01.csv  f5t5K10.csv  f5t5K1_b.csv  plot_data.R
hiqp_controllers/servicecalls/: add_frame.sh  add_geometric_primitives.sh  add_task.sh  add_task_jntlimit.sh  add_task_pop.sh  add_tasks.sh  frames.gv  remove_geometric_primitive.sh  remove_primitive.sh  remove_task.sh  remove_tasks.sh  reset_all.sh  reset_robot.sh  set_starting_pos.sh  start_controller.sh  test_all_primitives.sh  test_jntconfig_task.sh
hiqp_controllers/src/: casadi_solver.cpp  geometric_primitive_map.cpp  hiqp_kinematic_controller.cpp  hiqp_kinematic_controller.cpp~  hiqp_time_point.cpp  hiqp_utils.cpp  ros_kinematics_controller.cpp  ros_topic_subscriber.cpp  ros_visualizer.cpp  task.cpp  task_beh_fo.cpp  task_factory.cpp  task_manager.cpp  task_pop.cpp  task_visualizer.cpp
hiqp_controllers/topic_records/: 2016-09-12-17-12-43.bag  f20t1K0.csv  popminjerk2.csv  test.csv  test2.csv  test3.csv  wintracker_test.bag
hiqp_core/: CHANGELOG.rst  CMakeLists.txt  README.md  clear_controller.sh  disable_gravity_gazebo.sh  doxygen.config  package.xml  test_full_pose.sh  test_jnt_configuration.sh  test_jnt_lim_avoidance.sh  test_line_line_alignment.sh  test_point_plane_projection.sh  test_point_point_projection.sh  test_script.sh
hiqp_core/src/: hiqp_time_point.cpp  task.cpp  task_manager.cpp  utilities.cpp
hiqp_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
hiqp_examples/config/: two_arm_gripper.yaml  two_arm_gripper_preload.yaml  yumi_preload.yaml
hiqp_examples/launch/: display.launch  two_arm_gripper.rviz  two_arm_gripper_simulation.launch  yumi_simulation.launch
hiqp_examples/scripts/: activate_priority_level.sh  activate_task.sh
hiqp_examples/urdf/: two_arm_gripper.urdf.xacro  two_arm_gripper_joints.xacro  two_arm_gripper_links.xacro
hiqp_experiment_rosnode/: CMakeLists.txt  package.xml
hiqp_experiment_rosnode/src/: main.cpp
hiqp_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hiqp_msgs/msg/: FTSInfo.msg  JointControllerState.msg  JointInfo.msg  MonitoringDataMsg.msg  PoseWithName.msg  Primitive.msg  SDFMap.msg  Task.msg  TaskMeasure.msg  TaskMeasures.msg
hiqp_msgs/srv/: ActivatePriorityLevel.srv  ActivateTask.srv  AddGeometricPrimitive.srv  DeactivatePriorityLevel.srv  DeactivateTask.srv  DemonitorPriorityLevel.srv  DemonitorTask.srv  GetAllPrimitives.srv  GetAllTasks.srv  IsTaskSet.srv  ListAllGeometricPrimitives.srv  MonitorPriorityLevel.srv  MonitorTask.srv  RemoveAllGeometricPrimitives.srv  RemoveAllPrimitives.srv  RemoveAllTasks.srv  RemoveGeometricPrimitive.srv  RemovePrimitive.srv  RemovePrimitives.srv  RemovePriorityLevel.srv  RemoveTask.srv  RemoveTasks.srv  SetPrimitive.srv  SetPrimitives.srv  SetTask.srv  SetTasks.srv  UpdateTask.srv
hiqp_msgs_srvs/: CMakeLists.txt  package.xml
hiqp_msgs_srvs/msg/: JustADouble.msg  MonitorDataMsg.msg  PerfMeasMsg.msg  StringArray.msg  TaskSpec.msg  TaskSpecMsg.msg  Vector3d.msg
hiqp_msgs_srvs/srv/: AddGeometricPrimitive.srv  AddTask.srv  ListAllTasks.srv  RemoveGeometricPrimitive.srv  RemoveTask.srv  SetTask.srv  UpdateTask.srv
hiqp_ros/: CHANGELOG.rst  CMakeLists.txt  README.md  fCMakeLists.txt  fpackage.xml  hiqp_plugin.xml  package.xml  plugins.xml
hiqp_ros/config/: yumi.yaml  yumi_preload.yaml  yumi_preload_minimal.yaml
hiqp_ros/launch/: yumi.rviz  yumi_simulation.launch
hiqp_ros/scripts/: deactivate_task.sh  demonitor_priority_level.sh  list_all_primitives.sh  list_all_tasks.sh  monitor_priority_level.sh  monitor_task.sh  remove_all_tasks.sh  remove_priority_level.sh  remove_task.sh
hiqp_ros/src/: hiqp_client.cpp  hiqp_controller.cpp  hiqp_joint_effort_controller.cpp  hiqp_joint_trajectory_controller.cpp  hiqp_joint_velocity_controller.cpp  hiqp_joint_velocity_controller__old.cpp  hiqp_kfilter.cpp  hiqp_parameters.yaml  hiqp_service_handler.cpp  ros_topic_subscriber.cpp  ros_visualizer.cpp  test_hiqp_client.cpp  utilities.cpp
hiqp_rostopicsender/: CMakeLists.txt  package.xml
hiqp_rostopicsender/src/: main.cpp
robot_descriptions/irb4400_description/: CMakeLists.txt  README.md  package.xml
(+950 files in other folders)
