<?xml version="1.0"?>
<package>
  <name>hiqp_controllers</name>
  <version>0.0.1</version>
  <description>The HiQP_Controllers package</description>

  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <author email="robert.krug@oru.se">Robert Krug</author>
  <maintainer email="marcus.adam.johansson@gmail.com">Marcus A Johansson</maintainer>
  <maintainer email="robert.krug@oru.se">Robert Krug</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <build_depend>cmake_modules</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>hiqp_msgs_srvs</build_depend>
  <build_depend>casadi</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>hiqp_msgs_srvs</run_depend>

  <export>
    <controller_interface plugin="${prefix}/hiqp_controllers_plugins.xml"/>
  </export>
</package>
