<?xml version="1.0"?>
<package>
  <name>hiqp_core</name>
  <version>0.0.1</version>
  <description>The HiQP Control Framework</description>

  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="marcus.adam.johansson@gmail.com">Marcus A Johansson</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosconsole</build_depend>  
  <run_depend>rosconsole</run_depend>
</package>
