<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hiqp_core</name>
  <version>1.0.1</version>
  <description>The HiQP Control Framework, core functionalities</description>

  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
