<?xml version="1.0"?>
<package>
  <name>hiqp_examples</name>
  <version>0.0.3</version>
  <description>Examples showing intended use of the HiQP Control Framework</description>

  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="marcus.adam.johansson@gmail.com">Marcus A Johansson</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hiqp_core</build_depend>
  <build_depend>hiqp_msgs</build_depend>
  <build_depend>hiqp_ros</build_depend>

  <run_depend>hiqp_core</run_depend>
  <run_depend>hiqp_msgs</run_depend>
  <run_depend>hiqp_ros</run_depend>
</package>
