<?xml version="1.0"?>
<package>
  <name>hiqp_experiment_rosnode</name>
  <version>0.0.1</version>
  <description>A ros node I used for experiments</description>

  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="marcus.adam.johansson@gmail.com">Marcus A Johansson</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <build_depend>cmake_modules</build_depend>
  <build_depend>hiqp_msgs_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hiqp_msgs_srvs</run_depend>
</package>
