<?xml version="1.0"?>
<package format="3">
  <name>hiqp_msgs</name>
  <version>1.0.1</version>
  <description>Messages and services for the HiQP Control Framework</description>

  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
 
  <depend>builtin_interfaces</depend> 
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
 
  <member_of_group>rosidl_interface_packages</member_of_group> 
  <!--build_depend>message_generation</build_depend-->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
